# LIMO_COBOT

./: .gitignore  README.md
src/limo_cobot_moveit/: limo_cobot_moveit
src/limo_cobot_moveit/config/: limo_xacro.srdf  ros_controllers.yaml
src/limo_cobot_moveit/launch/: moveit.rviz
src/limo_description/urdf/: limo_base.urdf  limo_mycobot.xacro
src/limo_gazebo_sim/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/limo_gazebo_sim/launch/: limo_cobot_test.launch  limo_navigation.launch  limo_slam.launch
src/limo_gazebo_sim/rviz/: navigation.rviz  slam.rviz
src/limo_gazebo_sim/worlds/: Test_Office.world
src/limo_project/: CMakeLists.txt  package.xml
src/limo_project/launch/: complete_pick_place_mission.launch  demo_gazebo.launch  gazebo.launch  limo_base.launch  limo_gmapping.launch  limo_navigation_diff.launch
src/limo_project/maps/: new_map.pgm
src/limo_project/param/diff/: costmap_common_params.yaml  local_costmap_params.yaml
src/limo_project/rviz/: gmapping.rviz  navigation_diff.rviz
src/limo_project/scripts/: spawn_robot.sh
src/limo_project/worlds/: clearpath_playpen_Pick.world
src/limo_vision/: CMakeLists.txt  package.xml
src/limo_vision/scripts/: blue_cube_approach_pick_enhanced.py  final_arm_pick.py  mission_controller.py  mission_status.py  red_basket_approach.py
src/limo_vision/srv/: MissionTrigger.srv
src/mycobot_description/urdf/mycobot/: mycobot_urdf_gazebo.xacro
