<?xml version="1.0"?>
<package format="2">
  <name>limo_vision</name>
  <version>0.1.0</version>
  <description>Blue cube detection and visual servoing for Limo COBOT navigation</description>
  <maintainer email="karim@example.com">Karim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>

  <export></export>
</package>
